# mgit

./: .dockerignore  .env.sample  .env.sample1  .gitignore  .safety-project.ini  =3.9.0  ABSOLUTELY_FINAL_STATUS.md  ABSOLUTE_FINAL_VERIFICATION.md  ARCHITECTURE.md  CHANGELOG.md  CIRCULAR_IMPORT_FIX_SUMMARY.md  CI_CD_AUTOMATION_SUMMARY.md  CI_CD_READINESS_VALIDATION_REPORT.md  CI_CD_TEST_INTEGRATION_GUIDE.md  CI_CD_VALIDATION_REPORT.md  CLAUDE.md  CLEANUP_REPORT.md  COMPREHENSIVE_FIELD_SEARCH.md  CONTRIBUTING.md  CREDENTIAL_INVESTIGATION.md  CRITICAL_FIX_SPRINT_SUMMARY.md  DDD_REFACTOR_TODO.md  DEPLOYMENT_CHECKLIST.md  DOCKER_CONTAINERIZATION_SUMMARY.md  DOCKER_VALIDATION_REPORT.md  Dockerfile  Dockerfile.alpine  ENTERPRISE_CERTIFICATION_SUMMARY.md  FIELD_SEARCH_FINAL_SUMMARY.md  FIELD_UNIFICATION_ANALYSIS.md  FIELD_UNIFICATION_ANALYSIS_V2.md  FIELD_UNIFICATION_FINDINGS_REPORT.md  FINAL_METRICS.md  FINAL_PROJECT_STATUS.md  FINAL_SECURITY_CONFIRMATION.md  FINAL_STATEMENT.md  FINAL_VALIDATION_REPORT.md  INSTALLATION_FROM_GITHUB.md  INSTALLATION_GUIDE.md  INTEGRATION_EXAMPLE.md  (+79 more)
.claude/: config.local.json
.clinerules/: 01-automated-formatting-workflow.md  03-code-modularity.md  04-problem-isolation-strategy.md  workflow-preferences.md
.github/workflows/: ai-release-prompt.md  automated-release.yml  ci.yml  continuous-integration.yml  deploy.yml  docker-publish.yml  enhanced-release-notes.yml  env.yml  release-automation.yml  release.yml  security-scan.yml  setup-secret.md  test-ai-prompt.py  validate-version.yml
auth/: __init__.py
deploy/: README.md
docker/: .env.example  Makefile  README.md  entrypoint.sh  healthcheck.sh  security-scan.sh
docs/: NON_EXISTENT_COMMANDS_REMOVAL_SUMMARY.md  README.md  installation.md  refactoring-issues.md
docs/architecture/: architecture.md  multi-provider-design.md  provider-abstraction-architecture.md
docs/cli-design/: cli-subcommand-design.md  command-structure-design.md
docs/configuration/: configuration-schema-design.md  mgit-configuration-examples.md  yaml-config-loader-architecture.md  yaml-configuration-design.md
docs/deployment/: deployment-guide.md
docs/framework/: coordination-branch-pattern.md  mawep-diagrams.md  mawep-framework-design.md  mawep-implementation-guide.md  mawep-prompt-engineering.md  mawep-scenario-walkthrough.md
docs/kb/: provider-tools-libraries.md
docs/monitoring/: README.md
docs/providers/: README.md  azure-devops-usage-guide.md  bitbucket-hierarchical-filtering.md  bitbucket-usage-guide.md  github-usage-guide.md  provider-comparison-guide.md  provider-feature-matrix.md  repository-filtering-design.md
docs/security/: SECURITY_HARDENING_GUIDE.md  THREAT_MODEL.md
docs/usage/: query-patterns.md
examples/: monitoring_integration.py
kb/: api_bitbucket_endpoints.md  auth_bitbucket_guide.md  claude-code-settings-reference.md  gh-cli-actions-reference.md  git_bitbucket_integration.md  github-actions-comprehensive-reference.md  mermaid-syntax-reference.md  poethepoet-best-practices.md  readme-optimization-guide.md  ruamel-yaml-best-practices.md
mawep-simulation/: dependency-analysis.md  orchestration-plan.md
mawep-workspace/: ENTERPRISE_VALIDATION_ORCHESTRATION.md  NEXT_STEPS.md  PRODUCTION_DEPLOYMENT_SPRINT_STATUS.md  PUBLISHING_SPRINT_RETROSPECTIVE.md  PUBLISHING_SPRINT_SUMMARY.md  critical-fix-sprint-brief.md  critical-fix-state.yaml  enterprise-validation-assignments.md  enterprise-validation-sprint-state.yaml  mawep-framework-additions-final.md  mawep-framework-additions.md  mawep-framework-improvements.md  mawep-state.yaml  migration-sprint-assignments.md  migration-sprint-state.yaml  production-deployment-assignments.md  production-deployment-execution-guide.md  production-deployment-issues.md  production-deployment-sprint-state.yaml  project-closure-assignments.md  project-closure-sprint-state.yaml  publishing-sprint-assignments.md  publishing-sprint-launch.md  release-sprint-state.yaml  sprint-2-assignments.md  sprint-3a-assignments.md  sprint-3a-postmortem.md  sprint-3b-assignments.md  sprint-3b-postmortem.md  sprint-4-assignments.md  test-suite-repair-assignments.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
mgit/: __init__.py  __main__.py  __main__.py.backup  cli.py  constants.py  exceptions.py  exceptions_readme.md  exceptions_usage_example.py  logging.py
mgit/application/: CLAUDE.md  __init__.py  container.py
mgit/auth/: manager.py  models.py  storage.py  utils.py
mgit/commands/: __init__.py  auth.py  credential.py  listing.py  monitoring.py  status.py
mgit/config/: __init__.py  manager.py  providers.py  yaml_manager.py
mgit/domain/: CLAUDE.md  __init__.py  events.py  utils.py
mgit/git/: __init__.py  manager.py  utils.py
mgit/infrastructure/: CLAUDE.md  __init__.py  event_bus.py  git_adapter.py  provider_adapter.py
mgit/legacy/: __init__.py  azdevops_manager.py
mgit/monitoring/: __init__.py  cli.py  correlation.py  dashboard.py  health.py  integration.py  logger.py  logger_compat.py  metrics.py  performance.py  server.py
mgit/presentation/: CLAUDE.md  __init__.py
mgit/providers/: README.md  __init__.py  azdevops.py  base.py  bitbucket.py  exceptions.py  factory.py  github.py  manager.py  manager_v2.py  registry.py
mgit/security/: __init__.py  config.py  credentials.py  integration.py  logging.py  monitor.py  patches.py  validation.py
mgit/utils/: __init__.py  async_executor.py  helpers.py  logging.py  progress.py  query_parser.py
review-for-delete/docs/: refactoring-issues.md
scripts/: copy_linux_binary.py  create-bitbucket-issues.py  deploy.sh  release-automation.sh  rollback.sh  verify-deployment.sh
test-env/test-mgit/: pyvenv.cfg
tests/: __init__.py  conftest.py
tests/e2e/: ADAPTIVE_CLONE_SUCCESS_REPORT.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_LOG.md  __init__.py  test_authentication.py  test_clone_all.py  test_clone_all_adaptive.py  test_clone_all_minimal.py  test_clone_all_partial_matching.py  test_clone_all_provider_isolation.py  test_config.py  test_list.py
(+46 files in other folders)
